WebCore/accessibility/chromium/AccessibilityObjectChromium.cpp
@@ -34,4 +34,9 @@ bool AccessibilityObject::accessibilityIgnoreAttachment() const
     return false;
 }
 
+bool AccessibilityObject::accessibilityPlatformIncludesObject() const
+{
+    return false;
+}
+
 } // namespace WebCore
