WebCore/accessibility/win/AccessibilityObjectWin.cpp
@@ -35,6 +35,11 @@ bool AccessibilityObject::accessibilityIgnoreAttachment() const
     return false;
 }
 
+bool AccessibilityObject::accessibilityPlatformIncludesObject() const
+{
+    return false;
+}
+
 } // namespace WebCore
 
 #endif // HAVE(ACCESSIBILITY)
