WebCore/accessibility/wx/AccessibilityObjectWx.cpp
@@ -29,6 +29,11 @@ bool AccessibilityObject::accessibilityIgnoreAttachment() const
     return false;
 }
 
+bool AccessibilityObject::accessibilityPlatformIncludesObject() const
+{
+    return false;
+}
+
 } // namespace WebCore
 
 #endif // HAVE(ACCESSIBILITY)
