third_party/WebKit/WebCore/accessibility/qt/AccessibilityObjectQt.cpp
@@ -30,6 +30,11 @@ bool AccessibilityObject::accessibilityIgnoreAttachment() const
     return false;
 }
 
+bool AccessibilityObject::accessibilityPlatformIncludesObject() const
+{
+    return false;
+}
+
 } // namespace WebCore
 
 #endif // HAVE(ACCESSIBILITY)
